apps/full-stack/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
  namespace: full-stack
spec:
  selector:
    matchLabels:
      app: api-backend
  template:
    metadata:
      labels:
        app: api-backend
    spec:
      containers:
        - name: postgrest
          image: docker.io/postgrest/postgrest:latest
          resources:
            requests:
              memory: "64Mi" # Muy poquito
              cpu: "50m" # 5% de CPU
            limits:
              memory: "256Mi" # Margen de seguridad
              cpu: "300m"
          ports:
            - containerPort: 3000
