apps/full-stack/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: full-stack
spec:
  selector:
    app: api-backend
  ports:
    - port: 80
      targetPort: 3000
