apps/full-stack/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-route
  namespace: full-stack
spec:
  to:
    kind: Service
    name: api-service
  port:
    targetPort: http-api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
